# Biometrics-Studio

./: .gitignore  README.adoc  README_PL.adoc  commitlint.config.js  index.html  install.ps1  jest.config.ts  lint-staged.config.js  package.json  pnpm-lock.yaml  start.bat  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
.husky/: commit-msg  pre-commit  prepare-commit-msg
__tests__/e2e/: dark-mode.test.tsx
presets/: marking-characteristics-fingerprint-default.json  marking-characteristics-shoeprint-default.json  marking-types-fingerprint-default.json  marking-types-shoeprint-default.json
public/: settings.html  splashscreen.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/@types/: i18next.d.ts
src/app/: colors.css  globals.css  layout.tsx  page.tsx
src/components/edit-window/: edit-window.tsx
src/components/information-tabs/: information-tabs.tsx
src/components/menu/: menu.tsx  mode-menu.tsx  settings-menu.tsx  window-controls.tsx
src/components/settings-window/: settings-window.tsx
src/components/toolbar/: group.tsx  rotation-panel.tsx  separator.tsx  toolbar.tsx  vertical-toolbar.tsx
src/components/ui/: button.tsx  card.tsx  characteristics-key-capture-dialog.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  key-capture-dialog.tsx  label.tsx  menubar.tsx  radio-group.tsx  resizable.tsx  (+8 more)
src/providers/: WorkingModeProvider.tsx
src/views/: selectMode.tsx
(+129 files in other folders)
