[package]
name = "biometrics-studio"
version = "0.4.4"
description = "Application for forensic trace comparison"
authors = ["Cyprian Zdebski", "Konrad Boryś", "Marcel Gańczarczyk"]
license = ""
repository = ""
default-run = "biometrics-studio"
edition = "2021"

[lib]
name = "biometrics_studio_lib_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "=2.0.0"
tauri-plugin-window-state = "=2.0.0"
tauri-plugin-store = "2.1.0"
tauri-runtime = "=2.0.0"
tauri-runtime-wry = "=2.0.0"
tauri-plugin = "=2.0.0"
tauri-build = "=2.0.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
